# Deviant

./: .gitignore  CMakeLists.txt  Images.cpp  Images.h  LICENSE.md  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  build.bat  build.sh  notarization.result  notarizePKG.sh  sadistic.cpp  sadistic.h  signAAX.sh
Resources/: Deviant.xml  Info.plist  cycle2048-000.wav.reapeaks  cycle2048-001.wav.reapeaks  cycle2048-002.wav.reapeaks  cycle2048-003.wav.reapeaks
Source/: Analyzer.h  Dials.h  Effects.h  Members.h  Numbers.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Renderer.h  RoutingMatrix.h  SadisticUnlockform.cpp  SadisticUnlockform.h  WavePad.h  WaveShaper.h  deviant.cpp  deviant.h  sadistic.h  shaders.h
sadistic/: SadisticUnlockform.cpp  SadisticUnlockform.h  sadistic.h
